# yt-comment-dumper

./: .env.example  Makefile  README.md  docker-compose.yml  example.json  pyproject.toml
src/: db.py
src/etl/: extract.py  load.py  main.py  transform.py
src/server/: app.py  index.html  logic.py
